<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Clads</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="reset_fragment_hint_email_address">Email Address</string>
    <string name="all_forgot_password">Forgot Password</string>
    <string name="reset_password_fragment_email_address">Email Address</string>
    <string name="reset_password_fragment_use_phone">Use Phone</string>
    <string name="reset_password_fragment_send_request_password_link">Send Request Password Link</string>
    <string name="reset_password_fragment_remember_my_password">I can remember my password, <font color="#0066F5">Login</font></string>
    <string name="reset_password_confirmation_fragment_reset_password_button">Reset Password</string>
    <string name="reset_new_password_fragment_confirm_password">Confirm New Password</string>
    <string name="reset_password_confirmation_fragment_view_in_browser">view in broswer</string>
    <string name="reset_password_confirmation_fragment_stay_in_touch">Stay in touch</string>
    <string name="reset_password_confirmation_fragment_reset_detail">Hi,
    <br />You’re almost there. To finish resetting your password, please click on the  reset button below</string>
    <string name="reset_password_confirmation_fragment_copyright">copyright 2020. All Rights Reserved</string>
    <string name="reset_password_confirmation_fragment_email_sent_detail">email sent by Obioma</string>
    <string name="reset_password_confirmation_fragment_company_logo">Company Logo</string>
    <string name="reset_password_verification_fragment_gmail_icon">Gmail</string>
    <string name="reset_password_verification_fragment_instagram_icon">instagram</string>
    <string name="reset_password_verification_fragment_twitter_icon">twitter</string>
    <string name="reset_password_verification_fragment_facebook_icon">facebook</string>
    <string name="reset_new_password_fragment_new_password">New Password</string>
    <string name="all_clads_logo">clads logo</string>
    <string name="all_message_logo">Message Logo</string>
    <string name="login_page_password">Password</string>
    <string name="login_screen_welcome_back_tv">Welcome back</string>
    <string name="login_screen_login_to_continue_tv">Login to continue</string>
    <string name="login_screen_password_hint_tv">Password</string>
    <string name="login_screen_email_hint_tv">Email Address</string>
    <string name="login_screen_password_tv_hint">Password</string>
    <string name="login_screen_fragment_asking_if_new_user">New user?</string>
    <string name="login_screen_fragment_signup_for_free">Signup for free</string>
    <string name="login_screen_fragment_forgot_password">Forgot Password?</string>
    <string name="login_screen_fragment_login_button_text_view">Login</string>
    <string name="login_screen_fragment_login_using_phone_text_view">Use Phone</string>
    <string name="login_screen_fragment_sign_in_with_google">Sign in with Google</string>
    <string name="view_in_browser">view in browser</string>
    <string name="email_confirmation">Email Confirmation</string>
    <string name="email_confirmation_message">Hey Ijeoma, you are almost ready to start enjoying Clads. Simply click the big blue button below to verify your email</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="stay_in_touch">Stay in touch</string>
    <string name="email_sent_by_clads">email sent by Clads</string>
    <string name="copyright">copyright 2020, All Rights Reserved</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="have_an_account">Have an account?<b> Login</b></string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="email_address">Email Address</string>
    <string name="lets_get_to_know_you">Lets get to know you</string>
    <string name="choose_account_category">Choose account category</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="other_name">Other Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="all_ok">OK</string>
    <string name="all_cancel">CANCEL</string>
    <string-array name="category_list">
        <item>Tailor</item>
        <item>Weaver</item>
        <item>Client</item>
    </string-array>
    <string name="account_category">Account category</string>
    <string name="signup_options_fragment_signup_with_google_button_text">Sign up with Google</string>
    <string name="signup_options_fragment_signup_with_email_button_text">Sign up with email</string>
    <string name="signup_options_fragment_have_an_account_text">Have an account?</string>
    <string name="signup_options_fragment_login_text">Login</string>
    <string name="activity_splash_screen_loading_">Loading…</string>
    <string name="fragment_landing_screen_title">CLADS</string>
    <string name="generic_lorem_ipsum_string">Lorem ipsum, ipsum sum</string>
    <string name="all_sign_up">SIGN UP</string>
    <string name="all_login">LOGIN</string>
    <string name="client_measurement_tab_fragment_text_when_there_is_no_measurement_for_client">There are no measurements
    <br />for this client</string>
    <string name="client_delivery_address_tab_fragment_text_there_are_no_delivery_address">There are no delivery address <br>for this client</br></string>
    <string name="client_delivery_address_tab_fragment_text_client_has_one_delivery_address">This client has 1 delivery address for this client</string>
    <string name="client_measurement_tab_text_on_button">Save</string>
    <string name="fragment_add_measurement_title_textView">Add Measurement</string>
    <string name="dialog_fragment_edit_measurement_Name_text_view">Name</string>
    <string name="fragment_add_measurement_hint_measurement_name_text">Measurement Name</string>
    <string name="fragment_add_measurement_value_text_view">Value</string>
    <string name="fragment_add_measurement_hint_measurement_value_text">Measurement Value</string>
    <string name="fragment_add_measurement_button">Add Measurement</string>
    <string name="client_delivery_address_tab_fragment_button">Add Address</string>
    <string name="add_delivery_address_fragment_title_text_view">Add Address</string>
    <string name="add_delivery_address_fragment_subtitle_text_view">Add Delivery Address</string>
    <string name="add_delivery_address_fragment_delivery_address_text_view">Delivery Address</string>
    <string name="fragment_add_delivery_address_enter_delivery_address_hint_text">Enter Delivery Address</string>
    <string name="fragment_add_delivery_address_save_text_on_button">Save</string>
    <string name="fragment_add_delivery_address_city_hint_text">City</string>
    <string name="fragment_add_delivery_address_state_hint_text">State</string>
    <string name="dialog_fragment_edit_measurement_title_text_view">Edit Measurement</string>
    <string name="dialog_fragment_edit_measurement_add_measurement_text_view">Add Measurement</string>
    <string name="dialog_fragment_edit_measurement_save_text_button">Save</string>
    <string-array name="states">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nassarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
        <item>FCT</item>
    </string-array>
    <string name="you_have_not_clients_yet">You have no clients yet</string>
    <string name="client_list_image_description">Float button to add new client</string>
    <string name="clients">Clients</string>
    <string name="lagos">Lagos</string>
    <string name="nelson">Nelson</string>
    <string name="bawo">Bawo</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="client_home_location_pointer_icon">client home location pointer icon</string>
    <string name="client_home_screen_female_emoji_placeholder">client home screen female emoji placeholder</string>
    <string name="client_home_screen_male_emoji_placeholder">client home screen male emoji placeholder</string>
    <string name="add_client">Add Client</string>
    <string name="client_account">Client Account</string>
    <string name="measurements">Measurements</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="gender">Gender</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="next">Next</string>
    <string name="bawonelson_gmail_com">bawonelson@gmail.com</string>
    <string name="bawo_nelson">Bawo Nelson</string>
    <string name="phone_number">Phone Number</string>
    <string name="_07052215845">07052215845</string>
    <string name="An">An</string>
    <string name="Droid">Droid</string>
    <string name="enter_first_name">enter first name</string>
    <string name="payment_method_tab_screen_payment_options_text_view">Payment Options</string>
    <string name="payment_option_bank_deposit_naira">Bank deposit (Naira)</string>
    <string name="payment_option_bank_deposit_foreign_currencies">Bank deposit (USD, GPB, EUR)</string>
    <string name="payment_option_cash">Cash</string>
    <string name="payment_option_payoneer">Payoneer</string>
    <string name="payment_option_vcash">VCash</string>
    <string name="edit_profile_fragment_tap_to_change_picture_text">Tap to change picture</string>
    <string name="edit_profile_fragment_first_name_text">First Name</string>
    <string name="edit_profile_fragment_first_name_popup_hint">First name</string>
    <string name="edit_profile_fragment_last_name_text">Last Name</string>
    <string name="edit_profile_fragment_last_name_popup_hint">Last name</string>
    <string name="edit_profile_fragment_other_name_text">Other Name</string>
    <string name="edit_profile_fragment_other_name_popup_hint">Other name</string>
    <string name="fragment_message_message_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="fragment_message_user_name">Ola Machiavelli</string>
    <string name="fragment_message_read_more">Read more</string>
    <string name="fragment_message_arrow_icon_description">Arrow facing the right</string>
    <string name="fragment_message_day_of_post">Today</string>
    <string name="fragment_message_indicator">An indicator</string>
    <string name="drawer_menu_clients_item">Clients</string>
    <string name="drawer_menu_resources_item">Resources</string>
    <string name="drawer_menu_subscription_item">Subscription</string>
</resources>