<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/clientHomeFragment"
            android:title="@string/drawer_menu_clients_item"
            android:icon="@drawable/navigation_drawer_client_icon" />


        <item
            android:id="@+id/resourceHomeFragment"
            android:title="@string/drawer_menu_resources_item"
            android:icon="@drawable/navigation_drawer_resources_icon" />

        <item
            android:id="@+id/subscription"
            android:title="@string/drawer_menu_subscription_item"
            android:icon="@drawable/navigation_drawer_subscription_icon" />

        <item
            android:id="@+id/logout"
            android:title="Logout"
            android:icon="@drawable/navigation_drawer_logout_icon" />
        </menu>
