<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_message_recycler_list_view"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_22dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_25dp"
        android:background="@drawable/fragment_message_card_item"
        android:elevation="@dimen/padding_10dp"
        android:paddingStart="@dimen/padding_start_23dp"
        android:paddingEnd="@dimen/padding_bottom_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/fragment_message_notification_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_17dp"
            android:contentDescription="@string/notification_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fragment_message_notification_icon" />

        <TextView
            android:id="@+id/fragment_message_client_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/fragment_message_user_name"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_message_notification_image_view"
            app:layout_constraintStart_toEndOf="@+id/fragment_message_notification_image_view" />

        <TextView
            android:id="@+id/fragment_message_message_content_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_42dp"
            android:fontFamily="@font/poppins"
            android:text="@string/fragment_message_message_text"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fragment_message_notification_image_view"
            app:layout_constraintTop_toBottomOf="@+id/fragment_message_client_text_view" />

        <TextView
            android:id="@+id/fragment_message_read_more_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_5dp"
            android:layout_marginBottom="@dimen/margin_12dp"
            android:text="@string/fragment_message_read_more"
            android:textColor="@color/deep_sky_blue"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragment_message_arrow_image_view" />

        <ImageView
            android:id="@+id/fragment_message_arrow_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_7dp"
            android:contentDescription="@string/fragment_message_arrow_icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fragment_message_message_content_text_view"
            app:srcCompat="@drawable/fragment_message_arrow_right_icon"
            app:tint="@color/deep_sky_blue" />

        <TextView
            android:id="@+id/fragment_message_message_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_21dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/fragment_message_day_of_post"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_message_client_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/fragment_message_ellipse_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:contentDescription="@string/fragment_message_indicator"
            app:layout_constraintBottom_toTopOf="@+id/fragment_message_message_content_text_view"
            app:layout_constraintEnd_toStartOf="@+id/fragment_message_message_date_text_view"
            app:srcCompat="@drawable/fragment_message_ellipse_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>